@@ -1,14 +1,14 @@
 Package: GuardianR
 Type: Package
 Title: The Guardian API Wrapper
-Version: 0.5
-Date: 2014-09-16
-Author: Marco Toledo Bastos & Cornelius Puschmann
-Maintainer: Marco Toledo Bastos <marco@toledobastos.com>
+Version: 0.6
+Date: 2016-03-11
+Author: Marco T. Bastos & Cornelius Puschmann
+Maintainer: Marco T. Bastos <marco@toledobastos.com>
 Imports: RCurl, RJSONIO
-Description: Provides an interface to the Open Platform's Content API of the Guardian Media Group. It retrieves content from news outlets The Observer, The Guardian, and guardian.co.uk from 1999 to current day
+Description: Provides an interface to the Open Platform's Content API of the Guardian Media Group. It retrieves content from news outlets The Observer, The Guardian, and guardian.co.uk from 1999 to current day.
 License: GPL (>= 2)
-Packaged: 2014-09-16 16:50:11 UTC; toledo
+Packaged: 2016-03-12 02:46:32 UTC; toledo
 NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2014-09-16 23:41:51
+Date/Publication: 2016-03-12 08:51:08
