@@ -1,5 +1,6 @@
 import(RCurl)
 import(RJSONIO)
+import(utils)
 export(get_guardian)
 export(get_json)
 export(parse_json_to_df)
