@@ -12,8 +12,8 @@ The package provides an interface to the Open Platform's Content API of the Guar
 \tabular{ll}{
 Package: \tab GuardianR\cr
 Type: \tab Package\cr
-Version: \tab 0.5\cr
-Date: \tab 2014-09-16\cr
+Version: \tab 0.6\cr
+Date: \tab 2016-03-11\cr
 License: \tab GPL (>= 2)\cr
 }
 The results of keyword search include news articles that match the search terms and were published after 1999. Function get_guardian accepts date intervals with multiple keywords (format: "keyword1+keyword2") and returns a data frame. Rows refer to news articles and columns to the news item's data. The resulting data frame includes the following 27 columns:
@@ -77,10 +77,10 @@ At the time of this writing, Microsoft Windows does not have integration between
 To see how to citate the package, check citation("GuardianR").
 }
 \author{
-Marco Toledo Bastos & Cornelius Puschmann
+Marco T. Bastos & Cornelius Puschmann
 
 Maintainer: 
-Marco Toledo Bastos <marco@toledobastos.com>
+Marco T. Bastos <marco@toledobastos.com>
 }
 \references{
 More information on Content API is available on Guardian Item Reference Guide (http://www.guardian.co.uk/open-platform/content-api-item-reference-guide) and the Getting started guide (http://www.guardian.co.uk/open-platform/getting-started).
